--- a/COFFEE_MANAGEMENT/COFFEE_MANAGEMENT_API.csproj
+++ b/COFFEE_MANAGEMENT/COFFEE_MANAGEMENT_API.csproj
@@ -34,4 +34,8 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
 </Project>
